<resources>
    <string name="app_name">cotaAcaoApp</string>
    <string name="novoPapel">Novo Papel</string>
    <string name="papel">Papel</string>
    <string name="descricao">Descrição</string>
    <string name="lblDescricao">Descricao</string>
    <string name="lblValorCompra">Valor de compra</string>
    <string name="lblQuantidade">Quantidade</string>
    <string name="lblDataCompra">Data da compra</string>
    <string name="apagarTudo">Apagar Tudo</string>
</resources>
