<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroPapelActivity">



<GridLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/gridLayout2"
    android:layout_below="@+id/autoCompleteTextView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

    <TextView
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/papel"
        android:id="@+id/lblPapel"
        android:layout_gravity="left"
        android:layout_row="0"
        android:layout_column="0" />

    <AutoCompleteTextView
        android:id="@+id/textPapel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/gridLayout2"
        android:layout_toEndOf="@+id/gridLayout2">
        <requestFocus
            android:layout_width="match_parent"
            />
    </AutoCompleteTextView>

    <TextView
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblDescricao"
        android:id="@+id/lblPapelDescricao"
        android:layout_gravity="left"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPapelDescricao"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblValorCompra"
        android:id="@+id/lblValorCompra"
        android:layout_gravity="left"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textValorCompra"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:inputType="numberDecimal"
        android:layout_column="1" />

    <TextView
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblQuantidade"
        android:id="@+id/lblQuandidade"
        android:layout_gravity="left"
        android:layout_row="3"
        android:layout_column="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textQuantidade"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:inputType="number"
        android:layout_column="1" />

    <TextView
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblDataCompra"
        android:id="@+id/lblDataCompra"
        android:layout_gravity="left"
        android:layout_row="4"
        android:layout_column="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDataCompra"
        android:layout_gravity="center_horizontal"
        android:layout_row="4"
        android:layout_column="1" />


</GridLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:id="@+id/btnCadastrarPapel"
        android:layout_gravity="right"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/gridLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp" />
"


</RelativeLayout>
